--- a/public/css/platform-show.css
+++ b/public/css/platform-show.css
@@ -946,12 +946,29 @@ html, body {
 
 .platform-image-containter-horizontal{
     width: 100%;
-    height: auto;
+    height: 360px;
 }
 
+.platform-video-large {
+    width: auto;
+    height: 360px;
+    margin-left: auto;
+}
+
+.platform-image-containter-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 360px;
+    margin: 0 auto;
+    padding: 0 auto;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+
 .platform-image-large{
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 360px;
 }
 
 /* Business Deals Section
