--- a/public/css/portfolio-funding-show.css
+++ b/public/css/portfolio-funding-show.css
@@ -77,9 +77,7 @@
     grid-template-columns: 1fr 300px;
     gap: 40px;
     width: calc(100% - 40px);
-    margin-top: 50px;
-    margin-left: 40px;
-    margin-right: 0px;
+    margin: 0 auto;
     background: transparent;
     max-width: 1440px;
 }
