--- a/public/css/media-show.css
+++ b/public/css/media-show.css
@@ -43,6 +43,9 @@
     align-items: center;
     position: relative;
     z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .hero-section h1 {
