--- a/public/css/platform-show.css
+++ b/public/css/platform-show.css
@@ -986,8 +986,11 @@ html, body {
     height: auto;
 }
 
-.platform-image-containter-horizontal-yaxis{
+.platform-image-containter-horizontal-yaxis {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* Business Deals Section
    ========================================================================== */
