--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -387,6 +387,7 @@ body.menu-open {
     justify-content: flex-start;
     text-align: left;
     padding-left: 20px;
+    z-index: 1;
 }
 
 /* Certification Section */
