--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -1465,9 +1465,9 @@ html, body {
 .form-input,
 select.form-input {
     font-family: var(--font-family);
-    width: 100%;
     max-width: 100%;
     padding: 12px 16px;
+    background-color: #27272A;
     border: 1px solid var(--color-border);
     border-radius: 8px;
     color:  rgba(255, 255, 255, 0.9);
