--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,5 +1,35 @@
 
 
+/* Root variables for consistent theming */
+:root {
+    --color-primary: #FFD700;
+    --color-secondary: #EFA32F;
+    --color-dark: #18181B;
+    --color-black: #000000;
+    --color-white: #FFFFFF;
+    --color-gray-100: #F3F4F6;
+    --color-gray-400: #9CA3AF;
+    --color-gray-500: #6B7280;
+    --color-gray-600: #4B5563;
+    --color-gray-700: #374151;
+    --color-gray-800: #1F2937;
+    --color-gray-900: #111827;
+    --color-border: #3F3F46;
+    --font-family: 'Avenir LT Std', sans-serif;
+}
+
+@font-face {
+    font-family: 'Avenir LT Std';
+    src: url('../fonts/Avenir LT Std 45 Book.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* Newsletter Section Styles */
 .newsletter-section {
     background-color: #000000;
@@ -17,9 +47,9 @@
 }
 
 .newsletter-title {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     color: #FFFFFF;
-    font-size: 28;
+    font-size: 28px;
     font-weight: 500;
     margin: 30px 0 12px 0;
 }
@@ -37,7 +67,7 @@
 }
 
 .newsletter-subtitle {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     color: #A1A1AA;
     font-size: 14px;
     margin: 0 0 10px 0;
@@ -45,7 +75,7 @@
 
 
 .newsletter-button {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-size: 16px;
     background-color: #F59E0B;
     border: none;
