--- a/public/css/portfolio-funding-show.css
+++ b/public/css/portfolio-funding-show.css
@@ -23,6 +23,12 @@
     font-style: normal;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
+
 /* Base styles */
 * {
     font-family: var(--font-family);
