--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -22,6 +22,11 @@
     --gap-large: 24px;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* Common Layout Styles
    ========================================================================== */
 .portfolio-full-section,
@@ -853,7 +858,6 @@
 
 /* Newsletter section styles remain unchanged */
 .newsletter-section {
-    background-color: #000000;
     padding-top: 50px;
     padding-bottom: 40px;
     position: relative;
@@ -1160,9 +1164,9 @@
     width: 100%;
     height: 50%;
     background: linear-gradient(to top,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.8) 30%,
-        rgba(0, 0, 0, 0) 100%
+        rgba(19, 19, 19, 1) 0%,
+        rgba(19, 19, 19, 0.8) 30%,
+        rgba(19, 19, 19, 0) 100%
     );
     z-index: -5;
 }
@@ -1255,7 +1259,6 @@
 }
 
 .newsletter-section {
-    background-color: #000000;
     padding-top: 0px;
     padding-bottom: 60px;
     position: relative;
