--- a/public/css/about.css
+++ b/public/css/about.css
@@ -59,6 +59,11 @@ html, body {
     padding: 0;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* Search Component
    ========================================================================== */
 .search-input-container {
@@ -175,7 +180,6 @@ html, body {
 /* Newsletter Section
    ========================================================================== */
 .newsletter-section {
-    background-color: var(--color-black);
     padding: var(--spacing-2xl) 0 var(--spacing-xl);
     position: relative;
     margin-top: var(--spacing-2xl);
@@ -289,9 +293,9 @@ html, body {
     width: 100%;
     height: 50%;
     background: linear-gradient(to top,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.8) 30%,
-        rgba(0, 0, 0, 0) 100%
+        rgba(19, 19, 19, 1) 0%,
+        rgba(19, 19, 19, 0.8) 30%,
+        rgba(19, 19, 19, 0) 100%
     );
     z-index: -5;
 }
@@ -900,7 +904,6 @@ html, body {
 }
 
 .newsletter-section {
-    background-color: var(--color-black);
     padding-top: 0px;
     padding-bottom: 60px;
     position: relative;
