--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -56,7 +56,6 @@
 /* Base Styles
    ========================================================================== */
 .contact-section {
-    background-color: var(--color-black);
     color: var(--color-white);
     padding: var(--spacing-2xl) 0;
     margin-top: 150px;
@@ -70,6 +69,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: var(--grid-gap);
+}
+
+
+body {
+    background-color: #131313;
+    color: var(--color-white);
 }
 
 /* Contact Information
@@ -213,7 +218,6 @@
 /* Map Section
    ========================================================================== */
 .map-section {
-    background-color: var(--color-black);
     color: var(--color-white);
     padding: var(--spacing-2xl) 0;
     align-items: center;
