--- a/public/css/home.css
+++ b/public/css/home.css
@@ -68,6 +68,11 @@ html, body {
     width: 100%;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* ==========================================================================
    Hero Section
    ========================================================================== */
@@ -101,7 +106,12 @@ html, body {
     left: 0;
     width: 100%;
     height: 50%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(to top,
+    rgba(19, 19, 19, 1) 0%,
+    rgba(19, 19, 19, 0.8) 30%,
+    rgba(19, 19, 19, 0) 100%
+    );
+
     z-index: -5;
 }
 
@@ -308,7 +318,6 @@ html, body {
    ========================================================================== */
 
 .newsletter-section {
-    background-color: var(--color-black);
     padding: var(--spacing-2xl) 0 var(--spacing-xl);
     position: relative;
     margin-top: 60px;
