--- a/public/css/media.css
+++ b/public/css/media.css
@@ -68,7 +68,10 @@ body {
     font-family: var(--font-family);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #131313;
+    color: var(--color-white);
 }
+
 
 a {
     text-decoration: none;
@@ -129,12 +132,6 @@ a {
     content: '';
     position: absolute;
     inset: 0;
-    background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.2) 0%,
-        rgba(0, 0, 0, 0.6) 50%,
-        rgba(0, 0, 0, 0.8) 100%
-    );
     z-index: 1;
 }
 
@@ -235,11 +232,10 @@ a {
     left: 0;
     width: 100%;
     height: 50%;
-    background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.8) 30%,
-        rgba(0, 0, 0, 0) 100%
+    background: linear-gradient(to top,
+        rgba(19, 19, 19, 1) 0%,
+        rgba(19, 19, 19, 0.8) 30%,
+        rgba(19, 19, 19, 0) 100%
     );
     z-index: -5;
 }
