--- a/public/css/platform-apply.css
+++ b/public/css/platform-apply.css
@@ -55,6 +55,11 @@
     font-style: normal;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* Base styles */
 * {
     font-family: var(--font-family);
@@ -71,8 +76,8 @@
     align-items: center;
     padding: 2rem 4rem;
     background: linear-gradient(to right,
-        rgb(0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.8) 50%,
+        #131313 0%,
+        #131313 50%,
         rgba(255, 168, 37, 0.137) 100%
     );
     position: relative;
