--- a/public/css/report.css
+++ b/public/css/report.css
@@ -57,6 +57,11 @@ html, body {
     position: relative;
 }
 
+body {
+    background-color: #131313;
+    color: var(--color-white);
+}
+
 /* Typography
    ========================================================================== */
 @font-face {
@@ -111,11 +116,10 @@ body {
     left: 0;
     width: 100%;
     height: 50%;
-    background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.8) 30%,
-        rgba(0, 0, 0, 0) 100%
+    background: linear-gradient(to top,
+        rgba(19, 19, 19, 1) 0%,
+        rgba(19, 19, 19, 0.8) 30%,
+        rgba(19, 19, 19, 0) 100%
     );
     z-index: var(--z-background);
 }
